<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings used in app ui -->
    <string name="app_name">Social Scout</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello, </string>
    <string name="login_instructions">Link Social Network</string>
    <string name="get_your_first_social_badge">Get your first social badge</string>
    <string name="coming_soon">Coming soon</string>

    <!-- Hint -->
    <string name="share_instructions">Enter share message</string>

    <!-- Button titles -->
    <string name="btn_twitter_login">Login to Twitter</string>
    <string name="btn_facebook_login">Login to Facebook</string>
    <string name="btn_linkedIn_login">Login to LinkedIn</string>
    <string name="btn_share">Share</string>
    <string name="btn_proceed">Proceed</string>

    <!-- Twitter Configurations -->
    <string name="twitter_callback">https://www.socialscoutt.com</string>
    <string name="twitter_consumer_key">7DUziRcCqOiloMlm3EusxsDpx</string>
    <string name="twitter_consumer_secret">0izfs8BTRH2bK2VU40BLZ8F6EvXUk6O2OaKg4zdxiiXd9IWwEu</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <!-- End Configurations -->
    <string name="title_activity_share">Share</string>

</resources>