<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.socialscoutt.ShareActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/hello"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textView_default" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lakeside_view" />

    <EditText
        android:id="@+id/share_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/bg_edit_text"
        android:hint="@string/share_instructions"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_share"
        android:onClick="shareClick"/>

</LinearLayout>
